crates/alloy/tests/trybuild/no_async_provider_on_handle.stderr
error[E0277]: the trait bound `AlloyClientSignerHandle: AsyncProvider` is not satisfied
 --> tests/trybuild/no_async_provider_on_handle.rs:7:31
  |
7 |     requires_async_provider::<AlloyClientSignerHandle>();
  |                               ^^^^^^^^^^^^^^^^^^^^^^^ the trait `Provider` is not implemented for `AlloyClientSignerHandle`
  |
help: the following other types implement trait `AsyncProvider`
 --> src/client.rs
  |
  | impl AsyncProvider for AlloyClient {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `AlloyClient`
  |
 ::: $WORKSPACE/crates/alloy-provider/src/provider.rs
  |
  | impl AsyncProvider for RpcAlloyProvider {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `RpcAlloyProvider`
  = note: required for `AlloyClientSignerHandle` to implement `AsyncProvider`
note: required by a bound in `requires_async_provider`
 --> tests/trybuild/no_async_provider_on_handle.rs:4:31
  |
4 | fn requires_async_provider<P: AsyncProvider>() {}
  |                               ^^^^^^^^^^^^^ required by this bound in `requires_async_provider`
